objects/Hierarchy_Total__c.object
<CustomObject>
    <description>To be used in the Binding and non-Binding Quotation for Italy.
Used to store the hierarchy based totals.</description>
    <fields>
        <fullName>Base_Cloumn_2__c</fullName>
        <description>This field is used to hold the List price of the Hierarchy Level for Non-Binding (CR-17010)</description>
        <label>Base Cloumn 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Column_1__c</fullName>
        <description>This field is used to hold the List price of the Hierarchy Level for Non-Binding (CR-17010)</description>
        <label>Base_Column 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Column_3__c</fullName>
        <description>This field is used to hold the Hierarchy Level 2 values for Non-Binding Template(CR-17010)</description>
        <label>Base Column 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Total__c</fullName>
        <description>This field is used to populate List price for Non-Binding Template(CR-17010)</description>
        <label>Base Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_10__c</fullName>
        <label>Column 10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_11__c</fullName>
        <label>Column 11</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_12__c</fullName>
        <label>Column 12</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configurator_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configurator Section</label>
        <referenceTo>APTS_Configurator_Section__c</referenceTo>
        <relationshipLabel>Hierarchy Totals</relationshipLabel>
        <relationshipName>Hierarchy_Totals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Display Hierarchy</label>
        <referenceTo>Display_Hierarchy__c</referenceTo>
        <relationshipLabel>Hierarchy Totals</relationshipLabel>
        <relationshipName>Hierarchy_Totals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Header_Row__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Header Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Pos.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Hierarchy Totals</relationshipLabel>
        <relationshipName>Hierarchy_Totals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Category__c</fullName>
        <label>Record Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Count__c</fullName>
        <label>Section Count</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Hierarchy Total</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Category__c</columns>
        <columns>Column_1__c</columns>
        <columns>Column_2__c</columns>
        <columns>Column_3__c</columns>
        <columns>Column_4__c</columns>
        <columns>Column_5__c</columns>
        <columns>Header_Row__c</columns>
        <columns>Total__c</columns>
        <columns>Quote_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quote_Proposal__c</field>
            <operation>equals</operation>
            <value>Q-00052770</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HT-{00000}</displayFormat>
        <label>Hierarchy Total Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hierarchy Totals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>